Optimized many part of the code by reducing creation of temporary Vec3d/Vec3f.
Optimized JSON parser (x5 speed improvement) + unit tests.
Migrated all text drawing system to QFont. This fixes long standing bugs for displaying arabic and asian characters in the sky. Also allow to get rid of 6 source files and of the freetype dependency (managed internally to Qt)

0.10.2 [2009-03-09]
Based on Qt 4.5.
Display constellations lines using nicely distorted arcs.
Fixed GUI problems when creating a new location.
Fixed the grid lines wrap around at the discontinuities in cylindrical and Mercator projection.
Hide the planet computation problems after year 80608.
Use the Qt raster engine by default. This fixes mac rendering bugs and speeds up greatly the GUI rendering.
Improved management of intersection of viewports with large FOV and projections with singularities.
Added Hammer-Aitoff projection allowing full sky overview.
Fixed various bugs.

0.10.1 [2009-02-02]
Added reset all config options button.
Added code for uncompressing gzip files (borrowed from from libkde)
Allowed for gzip compressed JSON files.
Fixed flip buttons bug.
Fixed min FPS feature.
Implemented screenshots inverted colors feature + associated GUI.
Re-coded grid display from scratch. It is now much faster and much more robust.
Refactored large part of the Navigator and Projector classes. Added a StelPainter class allowing many optimizations and simpler API.
Re-added telescope control key bindings.
Improved the doxygen developers documentation.
Added Simbad lookup to the search window.
Fixed ecliptic line rendering.
Fixed grid rendering bugs.
Added ZIP archive support with code copied from KDE SVN.
Fixed sun's magnitude bug.
Added automatic star catalog downloader to GUI. Star catalog settings are now defined in a config file.
Converted system-dependent star catalog memory mapping code to QFile::map().
Added log file for debugging output. Prepends system specs, such as memory and CPU information.